# Homeworks

./: .gitignore  .gitmodules  README.md  cpp_setup.sh  emacs_notes.txt
BS/: A0_1_fak.c  A0_2_fak_extended.c  README.md
BS/A2/: A2_Impfzentrum_2a.c  A2_Impfzentrum_2c.c  A2_Impfzentrum_2d.c  A2_utils.h  Makefile
BS/A3/: a3_a.c  a3_c.c  vorgabe.c
Betriebssysteme/A3/: a3_b.c
Betriebsysteme/: A1_shell_menue.c
Betriebsysteme/A2/: A2_utils.c
Betriebsysteme/A3/: Makefile  vorgabe.h
CMake_Tutorials/: README.md
CMake_Tutorials/Step1/: CMakeLists.txt  tutorial.cxx
CMake_Tutorials/Step2/: tutorial.cxx
CMake_Tutorials/Step2/MathFunctions/: CMakeLists.txt  MathFunctions.cxx
CVDL/: README.md
CVDL/exercise02/: exercise_02_linear_classification.py
CVDL/exercise04/: exercise04_kwak.py
CVDL/exercise05/: exercise05_kwak.py
CV_DL/: README.md  exercise01_kwak.py
CV_DL/cnn-make-training-visible-master/: model.py
CV_DL/exercise01/: exercise01_kwak.py
CV_DL/exercise02/: DLCVDatasets.py
CV_DL/exercise03/: HelpfulCode.py  exercise03_kwak.py
CV_DL/exercise04/: exercise04_kwak.py
CV_DL/exercise05/: exercise05_kwak.py
CompStat/: README.md
CompStat/Codes/: Kwak-13-EA.R  kwak-02.R  kwak-03.R  kwak-04.R  kwak-05.R  kwak-06.R  kwak-07.R  kwak-08.R  kwak-09.R  kwak-10.R  kwak-11.R  kwak-12.R  kwak-13.R  kwak-14.R
CompStat/Uebungszettel/: targetFun.RData
CompStat/Uebungszettel/UB10/: .Rhistory  nlkq_data.RData
CompStat/Uebungszettel/UB11/: .RData  .Rhistory  blackbox.RData
CompStat/Uebungszettel/UB13/: .RData  .Rhistory  bic_data.RData  crunchigkeit.RData  langsamerCode.R
CompStat/Uebungszettel/UB3/: qSort.R  turingsimulator.R
CompStat/Uebungszettel/UB7/: .Rhistory  sim.R  sim_res.RData
ComputerVision_DeepLearning/exercise02/: exercise02_kwak.py
Cpp_Courses/: README.md
Cpp_Courses/EP/ExercisesP/: Aufgabe_3_3-zeiger.cpp  argv.cpp  gerade.cpp  prim.cpp  wurzel.cpp  zeiger.cpp
Cpp_Courses/EP/ExercisesP/Blatt03/: 03_QD_rechtwinklig.cpp
Cpp_Courses/EP/ExercisesP/Blatt06/: CMakeLists.txt  eidp-sequence.cpp
Cpp_Courses/EP/ExercisesP/Blatt06/include/: itEidp.hpp  itEidp.hpp~  moivreBinetEidP.hpp  rekEidp.hpp  rekEidp.hpp~
Cpp_Courses/EP/ExercisesP/Blatt06/src/: itEidp.cpp  itEidp.cpp~  moivreBinetEidP.cpp  moivreBinetEidP.cpp~  rekEidp.cpp  rekEidp.cpp~
Cpp_Courses/EP/ExercisesP/Blatt07/: CMakeLists.txt  main.cpp
Cpp_Courses/EP/ExercisesP/Blatt07/include/: eAutomobile.hpp
Cpp_Courses/EP/ExercisesP/Blatt07/src/: eAutomobile.cpp
Cpp_Courses/EP/ExercisesP/Blatt08_1/: CMakeLists.txt  buchTest.cpp  testumgebung.cpp
Cpp_Courses/EP/ExercisesP/Blatt08_1/include/: buch.h
Cpp_Courses/EP/ExercisesP/Blatt08_1/src/: buch.cpp
Cpp_Courses/EP/ExercisesP/Blatt08_2/: CMakeLists.txt  testumgebung.cpp
Cpp_Courses/EP/ExercisesP/Blatt08_2/include/: benutzer.h  bibliothek.h  bibmanager.h  buch.h  eidpliste.h
Cpp_Courses/EP/ExercisesP/Blatt08_2/src/: benutzer.cpp  bibliothek.cpp  bibmanager.cpp  buch.cpp
Cpp_Courses/EP/ExercisesP/Blatt09_1/: CMakeLists.txt  stack_test.cpp
Cpp_Courses/EP/ExercisesP/Blatt09_1/include/: stack.h
Cpp_Courses/EP/ExercisesP/Blatt09_1/src/: stack.cpp
Cpp_Courses/EP/ExercisesP/Blatt09_2/: CMakeLists.txt  eidpliste_test.cpp
Cpp_Courses/EP/ExercisesP/Blatt09_2/include/: eidpliste.h
Cpp_Courses/EP/ExercisesP/Blatt09_2/src/: eidpliste.cpp
Cpp_Courses/EP/ExercisesP/Blatt10/: CMakeLists.txt  bintree-test.cpp  file.txt
Cpp_Courses/EP/ExercisesP/Blatt10/include/: bintree.h  eidpliste.h
Cpp_Courses/EP/ExercisesUe/: Aufgabe_01_3.cpp  Aufgabe_02_2.cpp  Aufgabe_02_3.cpp  Aufgabe_03_03.cpp  Aufgabe_04_2a.cpp  Aufgabe_04_2c.cpp  Aufgabe_04_Prasenz.cpp  anagramme.cpp
Cpp_Courses/Hello_World/: CMakeLists.txt
DAP2/: README.md
DAP2/Praktikum2/: Sortierung.java
DAP2/Praktikum3/: BubbleSort.java  GeometricSearch.java
DAP2/Praktikum4/: Application.java  Arrow.java  ConvexHull.java  Distance.java  EuclidDistance.java  Point.java  Simplex.java  Triangle.java
DAP2/Praktikum5/: ATM.java  QuickSort.java
DAP2/Praktikum6/: Anwendung.java  Interval.java  Job.java  mergeExample.java
DAP2/Praktikum7/: LCS.java
DAP2/Praktikum8/: EditDistance.java  intDecimal.java
DAP2/Praktikum9/: SearchTree.java
EP/ExercisesP/: Aufgabe_3_2-zeiger.cpp  isbn.cpp  quadratzahlen.cpp  test.cpp  widerstand.cpp  zeitumrechnung.cpp
EP/ExercisesP/Aufgabe3/: rechtwinklig.cpp
EP/ExercisesP/Aufgabe_4_1/: debug.cpp
EP/ExercisesP/Aufgabe_4_3/: anagramme.cpp
EP/ExercisesUe/: Aufgabe_02_4.cpp  Aufgabe_03_1.cpp  Aufgabe_04_2b.cpp  Aufgabe_04_Prasenz.cpp
MIPS_Tutorials/: 03_helloAssembly.asm  05_printInteger.asm  08_addingIntegers.asm  09_subtractIntegers.asm  10_multiply.asm  12_multiply_sll.asm  13_division1.asm  14_division2.asm  15_procedure.asm  15_procedureWithInput.asm  16_procedureWithArgumetnsReturnValues.asm  17_registers.asm  18_nestedProcedures.asm  19_userIOInteger.asm  20_userIOFloat.asm  21_userInputDouble.asm  22_userInputString.asm  23_conditionals.asm  24_conditionals_slt.asm  25_pseudo-branch.asm  26_Loop_while.asm  27_Arrays.asm  28_ArrayWithLoop.asm  29_ArrayInitializer.asm  30_floatingPointArithmetic.asm  31_conditionsWithFloats.asm  34_RecursionFactorial.asm  35_BitManipulation.asm  36_SumAvg.asm  37_mdArray.asm
Project_DeConvNet/: DeConvNet.py  model.py
setup/: clang_error_gdb.txt  clang_setup.sh  emacs_notes.txt  init.el
